# actix-api

./: .env  Cargo.toml
src/: auth.rs  authorization.rs  db.rs  error.rs  functions.rs  handlers.rs  main.rs  models.rs  routes.rs  routing.rs
