[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
actix = "0.13.0"
actix-web = "4.2.1"
dotenv = "0.15.0"
serde ={ version = "1.0.145", features = ["derive"]}
serde_json = "1.0.86"
sqlx = { version = "0.7.1", features = ["runtime-async-std-native-tls", "postgres"] }
tokio = "1.32.0"
regex = "1.5"